force-app/main/default/objects/Student__c/fields/EMSO__c.field-meta.xml
<CustomField>
    <fullName>EMSO__c</fullName>
    <label>EMSO</label>
    <precision>13</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>