force-app/main/default/objects/Student__c/fields/EMSO_Text__c.field-meta.xml
<CustomField>
    <fullName>EMSO_Text__c</fullName>
    <label>EMŠO</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
</CustomField>