force-app/main/default/objects/Student__c/fields/Enrollment_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Type__c</fullName>
    <label>Enrollment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Student</fullName>
            </value>
            <value>
                <fullName>Part-time Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>