force-app/main/default/objects/Student__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payer</label>
    <type>Checkbox</type>
</CustomField>