force-app/main/default/objects/Student__c/validationRules/Payer_Only_For_Part_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Payer_Only_For_Part_Time</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Payer__c,
    NOT(ISPICKVAL(Enrollment_Type__c, &quot;Part-time Student&quot;))
)</errorConditionFormula>
    <errorMessage>Payer can only be selected for a part-time student.</errorMessage>
</ValidationRule>