force-app/main/default/objects/Student__c/validationRules/Valid_EMSO_Text.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_EMSO_Text</fullName>
    <active>true</active>
    <errorConditionFormula>IF(
    NOT(REGEX(EMSO_Text__c, &quot;^[0-9]{13}$&quot;)),
    true,
    OR(
        VALUE(LEFT(EMSO_Text__c, 2)) &lt; 1,
        VALUE(MID(EMSO_Text__c, 3, 2)) &lt; 1,
        VALUE(MID(EMSO_Text__c, 3, 2)) &gt; 12,
        VALUE(LEFT(EMSO_Text__c, 2)) &gt;
            CASE(
                MID(EMSO_Text__c, 3, 2),
                &quot;01&quot;, 31,
                &quot;02&quot;, IF(MOD(VALUE(MID(EMSO_Text__c, 5, 3)), 4) = 0, 29, 28),
                &quot;03&quot;, 31,
                &quot;04&quot;, 30,
                &quot;05&quot;, 31,
                &quot;06&quot;, 30,
                &quot;07&quot;, 31,
                &quot;08&quot;, 31,
                &quot;09&quot;, 30,
                &quot;10&quot;, 31,
                &quot;11&quot;, 30,
                &quot;12&quot;, 31,
                0
            ),
        CASE(
            MOD(
                11 - MOD(
                    VALUE(MID(EMSO_Text__c, 1, 1)) * 7 +
                    VALUE(MID(EMSO_Text__c, 2, 1)) * 6 +
                    VALUE(MID(EMSO_Text__c, 3, 1)) * 5 +
                    VALUE(MID(EMSO_Text__c, 4, 1)) * 4 +
                    VALUE(MID(EMSO_Text__c, 5, 1)) * 3 +
                    VALUE(MID(EMSO_Text__c, 6, 1)) * 2 +
                    VALUE(MID(EMSO_Text__c, 7, 1)) * 7 +
                    VALUE(MID(EMSO_Text__c, 8, 1)) * 6 +
                    VALUE(MID(EMSO_Text__c, 9, 1)) * 5 +
                    VALUE(MID(EMSO_Text__c, 10, 1)) * 4 +
                    VALUE(MID(EMSO_Text__c, 11, 1)) * 3 +
                    VALUE(MID(EMSO_Text__c, 12, 1)) * 2,
                    11
                ),
                11
            ),
            10, -1,
            MOD(
                11 - MOD(
                    VALUE(MID(EMSO_Text__c, 1, 1)) * 7 +
                    VALUE(MID(EMSO_Text__c, 2, 1)) * 6 +
                    VALUE(MID(EMSO_Text__c, 3, 1)) * 5 +
                    VALUE(MID(EMSO_Text__c, 4, 1)) * 4 +
                    VALUE(MID(EMSO_Text__c, 5, 1)) * 3 +
                    VALUE(MID(EMSO_Text__c, 6, 1)) * 2 +
                    VALUE(MID(EMSO_Text__c, 7, 1)) * 7 +
                    VALUE(MID(EMSO_Text__c, 8, 1)) * 6 +
                    VALUE(MID(EMSO_Text__c, 9, 1)) * 5 +
                    VALUE(MID(EMSO_Text__c, 10, 1)) * 4 +
                    VALUE(MID(EMSO_Text__c, 11, 1)) * 3 +
                    VALUE(MID(EMSO_Text__c, 12, 1)) * 2,
                    11
                ),
                11
            )
        ) &lt;&gt; VALUE(RIGHT(EMSO_Text__c, 1))
    )
)</errorConditionFormula>
    <errorMessage>EMŠO must contain exactly 13 digits, a valid date, and pass modulo-11 validation.</errorMessage>
</ValidationRule>